--- a/Dockerfile copy
+++ b/Dockerfile copy
@@ -1,4 +1,5 @@
-FROM ghcr.io/chameleoncloud/edge-picamera-image:latest
+FROM shermanm/rpi4-libcamera-debian:bullseye
+# FROM ghcr.io/chameleoncloud/edge-picamera-image:sha-d858119
 
 RUN apt-get update && \
     apt-get install -y \
@@ -7,7 +8,7 @@ RUN apt-get update && \
 
 COPY take_picture.sh /usr/src/app/take_picture.sh
 
-ENV UDEV=on
+# ENV UDEV=on
 
 RUN usermod -a -G video root
 
